--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="btn btn-primary btn-lg" href="NishaTellis_Resume.pdf" role="button">Download Resume</a>
                 </div>
              <div class="col-md-6">
-                    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/woman-web-developer-8184991-6547024.png?f=webp">
+                    <img src="img\ai image.png">
                 </div>
             </div>
         </div>
