--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
     <body data-spy="scroll" data-target="#navbar" data-offset="70">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" id="navbar">
           <a class="navbar-brand" href="#">Portfolio</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,14 +38,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>Hello,Its me</h3>
-                    <h1>Nisha Tellis</h1>
+                    <h1 class="display-4 d-none d-md-block">Nisha Tellis</h1>
+                    <h1 class="h1 d-md-none">Nisha Tellis</h1>
                     <h3>And i'm a Graduate Software Engineer</h3>
                     <h5>Welcome to my Portfolio</h5>
                     
                     <a class="btn btn-primary btn-lg" href="NishaTellis_Resume.pdf" role="button">Download Resume</a>
                 </div>
-             <div class="col-md-6">
-                    <img src="img\ai image.png">
+             <div class="col-md-6 text-center text-md-left">
+                    <img src="img\ai image.png" class="img-fluid" alt="image">
                 </div>
             </div>
         </div>
@@ -103,6 +104,10 @@
                     <button type="button" class="btn btn-primary">Bootstrap</button>
                 </div>
             </div>
+
+
+
+
             <div class="row">
                 <div class="col-md-12">
                     <h3>Database</h3>
